# fictional-ranking

./: .gitignore  README.md  bench.py  character.py  character_filter.py  config.py  db.py  evaluate.py  exceptions.py  generator.py  information.toml  marvel.py  match.py  match_filter.py  matchmaking.py  mediawiki.py  one_piece.py  pyproject.toml  rate_limit.py  rating.py  run.py  source.py  source_manager.py  stats.py  template.html  test.py  test_image.py  tier_list.py  type_registrar.py  utils.py  wtp_test.py
evals/: one_piece.toml
prompts/: prompt_end.md  prompt_end.toml  prompt_end_noquote.md  prompt_end_noquote.toml  prompt_end_random.md  prompt_end_random.toml  prompt_generated.md
prompts/old/: prompt_old.txt  prompt_start.txt
