[project]
name = "fictional-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiolimiter>=1.1.0",
    "choix>=0.3.5",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "litellm>=1.44.14",
    "lxml>=5.3.0",
    "numpy>=2.1.0",
    "py7zr>=0.22.0",
    "python-dateutil>=2.9.0.post0",
    "toml>=0.10.2",
    "tqdm>=4.66.5",
    "wikitextparser>=0.56.2",
    "zstandard>=0.23.0",
]
